# N-Body-Orbital-Simulator

./: README.md  main.py  pyproject.toml  setup.py
SFD_FINAL_PROJECT_MISSION/: FINAL_GMAT_SFD.script  Interplanetary_Mission.py  SC_mars_Hyperbolic.py  SFD_FINAL_PROJECT.script  SFD_FINAL_PROJECT_GMAT.script
core/: entities.py  mission_report.py  physics_engine.py  simulation_controller.py  visualizer.py
examples/: 3BP_ex1.py  3BP_ex2.py  bi_elliptical_orbit.py  hohmann_earth_orbit.py  hohmann_earth_orbit2.py  hyperbolic_capture.py  infinite_shape_3BP.py  lagrange_equilateral.py  moon_flyby.py
examples/3 Body Problems/: 3BP_ex1.py  3BP_ex2.py  infinite_shape_3BP.py
examples/Hohmann & Bielliptic Transfer/: bi_elliptical_orbit.py  hohmann_earth_orbit.py  hohmann_earth_orbit2.py
examples/Patched Conics/: HP_sun+mars copy.py  HP_sun+mars.py  hyperbolic_capture.py  moon_flyby.py
mission_design/: coplanar_maneuvers.py  hohmann.py  hyp_capture.py  orbit_transfers.py
